// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when App is rendered with shallow should match the snapshot 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <SearchField
      onChange={[Function]}
      value="ch"
    />
    <Pagination
      onChange={[Function]}
      value=""
    />
    <SearchType
      onChange={[Function]}
      value=""
    />
    <input
      type="submit"
      value="submit"
    />
  </form>
  <BookTable
    books={Array []}
  />
</div>
`;

exports[`when BookRows is rendered with shallow before component has mounted should match the snapshot 1`] = `
Array [
  <tbody>
    <tr
      key="ANIMAL FARM (AB)"
    >
      <TdWithStyles>
        ANIMAL FARM (AB)
      </TdWithStyles>
      <TdWithStyles>
        George Orwell
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Ardil-22 (Catch-22, # 1)"
    >
      <TdWithStyles>
        Ardil-22 (Catch-22, # 1)
      </TdWithStyles>
      <TdWithStyles>
        Joseph Heller
      </TdWithStyles>
      <TdWithStyles>
        3.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="A Tale of Two Cities"
    >
      <TdWithStyles>
        A Tale of Two Cities
      </TdWithStyles>
      <TdWithStyles>
        Charles Dickens
      </TdWithStyles>
      <TdWithStyles>
        4.16
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Fields of Elysium (Fields of Elysium, #1)"
    >
      <TdWithStyles>
        Fields of Elysium (Fields of Elysium, #1)
      </TdWithStyles>
      <TdWithStyles>
        A.B. Whelan
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="14 Days to Die"
    >
      <TdWithStyles>
        14 Days to Die
      </TdWithStyles>
      <TdWithStyles>
        A.B. Whelan
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Cornelsen Senior English Library - Literatur: Ab 11. Schuljahr - Never let me go: Textband mit Annotationen und Zusatztexten"
    >
      <TdWithStyles>
        Cornelsen Senior English Library - Literatur: Ab 11. Schuljahr - Never let me go: Textband mit Annotationen und Zusatztexten
      </TdWithStyles>
      <TdWithStyles>
        Kazuo Ishiguro
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="A Leste do Éden (Vol I e II)"
    >
      <TdWithStyles>
        A Leste do Éden (Vol I e II)
      </TdWithStyles>
      <TdWithStyles>
        John Steinbeck
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Atlas wirft die Welt ab"
    >
      <TdWithStyles>
        Atlas wirft die Welt ab
      </TdWithStyles>
      <TdWithStyles>
        Ayn Rand
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="The Way West (The Big Sky, #2)"
    >
      <TdWithStyles>
        The Way West (The Big Sky, #2)
      </TdWithStyles>
      <TdWithStyles>
        A.B. Guthrie Jr.
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Hart van Inkt (Inkt, #1)"
    >
      <TdWithStyles>
        Hart van Inkt (Inkt, #1)
      </TdWithStyles>
      <TdWithStyles>
        Cornelia Funke
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="The Big Sky (The Big Sky, #1)"
    >
      <TdWithStyles>
        The Big Sky (The Big Sky, #1)
      </TdWithStyles>
      <TdWithStyles>
        A.B. Guthrie Jr.
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="As Sick as Our Secrets"
    >
      <TdWithStyles>
        As Sick as Our Secrets
      </TdWithStyles>
      <TdWithStyles>
        A.B. Whelan
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="AB de Villiers - The Autobiography"
    >
      <TdWithStyles>
        AB de Villiers - The Autobiography
      </TdWithStyles>
      <TdWithStyles>
        A.B. de Villiers
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Oliver Twist ( Ab 11 J.)."
    >
      <TdWithStyles>
        Oliver Twist ( Ab 11 J.).
      </TdWithStyles>
      <TdWithStyles>
        Charles Dickens
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Don Quixote [illustrated]"
    >
      <TdWithStyles>
        Don Quixote [illustrated]
      </TdWithStyles>
      <TdWithStyles>
        Miguel de Cervantes Saavedra
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="Insel der blauen Delfine. CD. ( Ab 8 J.)"
    >
      <TdWithStyles>
        Insel der blauen Delfine. CD. ( Ab 8 J.)
      </TdWithStyles>
      <TdWithStyles>
        Scott O'Dell
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="A Streetcar Named Desire. Ab 11. Schuljahr"
    >
      <TdWithStyles>
        A Streetcar Named Desire. Ab 11. Schuljahr
      </TdWithStyles>
      <TdWithStyles>
        Tennessee Williams
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="A mulher de Jerusalém"
    >
      <TdWithStyles>
        A mulher de Jerusalém
      </TdWithStyles>
      <TdWithStyles>
        A.B. Yehoshua
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="The Lover"
    >
      <TdWithStyles>
        The Lover
      </TdWithStyles>
      <TdWithStyles>
        A.B. Yehoshua
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
  <tbody>
    <tr
      key="O misterioso caso de Styles"
    >
      <TdWithStyles>
        O misterioso caso de Styles
      </TdWithStyles>
      <TdWithStyles>
        Agatha Christie
      </TdWithStyles>
      <TdWithStyles>
        4.26
      </TdWithStyles>
    </tr>
  </tbody>,
]
`;

exports[`when Pagination is rendered with shallow should match the snapshot 1`] = `
<label>
  Pagination Parameters:
  <input
    onChange={[Function]}
    type="number"
    value="2"
  />
</label>
`;

exports[`when SearchField is rendered with shallow should match the snapshot 1`] = `
<label>
  Enter text to search:
  <input
    onChange={[Function]}
    type="text"
    value="ab"
  />
</label>
`;

exports[`when search type is rendered with shallow should match the snapshot 1`] = `
<label>
  Choose a search type parameter:
  <select
    onChange={[Function]}
  >
    <option
      value="all"
    >
      all
    </option>
    <option
      value="author"
    >
      author
    </option>
    <option
      value="title"
    >
      title
    </option>
  </select>
</label>
`;
